    + [BR] Detect dbgsym package in control file.  (Closes: #858117).
    + [BR] Warn about obsolete -dbg package.
  * checks/cruft.{desc,pm}:
    + [BR] Document long line tagged source-is-missing as a feature
      not a bug.  (Closes: #849470).
    + [BR] Correct a typo in description of tag
      license-problem-convert-utf-code.
    + [BR] Avoid a false positive in gfdl file detection.
  * checks/files.pm:
    + [BR] Do not report duplicates for package-installs-apt-preferences
      and package-installs-apt-sources.  (Closes: #814521).
  * checks/menu-format.{desc,pm}:
    + [NT] Update the reference to Desktop Entry Specification to point
      to version 1.1.
    + [NT] Apply patch from Laurent Bigonville to check desktop files
      for missing "Icon" field.  (Closes: #854132)

  * data/common/source-fields:
    + [NT] Add new "Testsuite-Restrictions" field.
  * data/obsolete-sites/obsolete-sites:
    + [BR] Apply patch from Hideki Yamane in order to warn about
      fedorahosted.  (Closes: #856954).
  * data/spelling/corrections:
    + [NT] Apply patches from Edward Betts to fix bugs in the correction
      word lists.  (Closes: #852005, #852084)
    + [NT] Apply patch from Edward Betts to remove corrections for
      "targetted" and "targetting" as they are valid alternative
      spellings in AU.  (Closes: #852145)
    + [EB] Add some more spelling corrections.  (Closes: #852369, #852404,
      #852407, #852409, #852410, #852411, #852413, #852414, #852416,
      #852419, #852421, #852426)

  * debian/copyright:
    + [EB] Add Edward Betts.

  * lib/Lintian/CheckScript.pm:
    + [NT] Remove fallback code for "old" style "pm"-less checks.

  * frontend/dplint:
    + [NT] Ensure all include directories are absolute before passing
      them on to the actual command.

  * reporting/graphs/tags.gpi:
    + [NT] Tweak tags.gpi so it works with gnuplot 5.

  * t/runtests:
    + [NT] Re-sort test output after running the "post_test" sed script