@@ -26,3 +26,15 @@ Description: {$description} (dbg)
  .
  The debug package.
 
+Package: {$source}-debug
+Section: debug
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} (dbg)
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ The debug package.
+
